# cm-app

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  TESTING_SUMMARY.md  deny.toml  docker-compose.yml
e2e/: README.md  (+3 more)
libs/ai-client/: Cargo.toml
libs/ai-client/src/: lib.rs
libs/auth/: Cargo.toml
libs/auth/src/: claims.rs  error.rs  jwt.rs  lib.rs  middleware.rs  password.rs  rbac.rs
libs/common/: Cargo.toml
libs/common/src/: extractors.rs  health.rs  lib.rs  migrations.rs  pagination.rs  response.rs
libs/errors/: Cargo.toml
libs/errors/src/: lib.rs
libs/events/: Cargo.toml
libs/events/src/: consumer.rs  envelope.rs  lib.rs  payloads.rs  producer.rs  topics.rs
libs/geo/: Cargo.toml
libs/geo/src/: lib.rs
libs/geo/tests/: integration.rs
libs/tracing/: Cargo.toml
libs/tracing/src/: lib.rs
libs/types/: Cargo.toml
libs/types/src/: awb.rs  invoice.rs  lib.rs
services/ai-layer/: Cargo.toml  Dockerfile
services/ai-layer/migrations/: 0001_create_agent_tables.sql
services/ai-layer/python/: config.py  main.py  pyproject.toml
services/ai-layer/python/agents/: __init__.py  base.py  dispatch.py  merchant_support.py  reconciliation.py  recovery.py
services/ai-layer/python/events/: __init__.py  consumer.py  handlers.py
services/ai-layer/python/tools/: __init__.py  mcp_bridge.py
services/ai-layer/src/: bootstrap.rs  config.rs  lib.rs  main.rs
services/ai-layer/src/api/http/: mod.rs
services/ai-layer/src/application/: mod.rs
services/ai-layer/src/application/agent/: mod.rs
services/ai-layer/src/application/triggers/: mod.rs
services/ai-layer/src/domain/entities/: mod.rs
services/ai-layer/src/infrastructure/: mod.rs
services/ai-layer/src/infrastructure/claude/: mod.rs
services/ai-layer/src/infrastructure/db/: mod.rs
services/ai-layer/src/infrastructure/tools/: mod.rs
services/ai-layer/tests/integration/: mod.rs
services/ai-layer/tests/unit/: mod.rs
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: bootstrap.rs  config.rs  health.rs  lib.rs  main.rs
services/api-gateway/src/proxy/: mod.rs
services/api-gateway/src/ratelimit/: mod.rs
services/api-gateway/src/registry/: mod.rs
services/business-logic/: Cargo.toml  Dockerfile
services/business-logic/migrations/: 0001_create_rules_tables.sql  0002_rename_automation_rules_to_rules.sql  0003_align_rules_runtime_schema.sql
services/business-logic/src/: bootstrap.rs  main.rs
services/business-logic/src/api/http/: mod.rs
services/business-logic/src/application/services/: mod.rs
services/business-logic/src/domain/entities/: mod.rs  rule.rs
services/business-logic/src/infrastructure/cache/: mod.rs
services/business-logic/src/infrastructure/db/: mod.rs
services/business-logic/src/infrastructure/messaging/: mod.rs
services/business-logic/tests/integration/: mod.rs
services/business-logic/tests/unit/: mod.rs
services/compliance/: Cargo.toml  Dockerfile
services/compliance/migrations/: 20260325000002_document_types.sql  20260325000003_compliance_profiles.sql  20260325000004_driver_documents.sql  20260325000005_audit_log.sql  20260325000006_seed_document_types.sql
services/compliance/src/: bootstrap.rs  config.rs  lib.rs  main.rs
services/compliance/src/api/http/: admin_routes.rs  carrier_routes.rs  driver_routes.rs  health.rs  internal_routes.rs  mod.rs  partner_routes.rs  vehicle_routes.rs
services/compliance/src/application/services/: compliance_service.rs  expiry_checker.rs  mod.rs
services/compliance/src/domain/entities/: audit_log.rs  compliance_profile.rs  document_type.rs  driver_document.rs  mod.rs
services/compliance/src/domain/events/: mod.rs
services/compliance/src/domain/repositories/: mod.rs
services/compliance/src/infrastructure/: mod.rs
services/compliance/src/infrastructure/db/: audit_log_repo.rs  compliance_profile_repo.rs  document_type_repo.rs  driver_document_repo.rs  mod.rs
services/dispatch/: .env  Cargo.toml  Dockerfile
services/dispatch/migrations/: 0001_create_routes.sql  0002_create_driver_assignments.sql  0003_dispatch_queue.sql  0004_driver_profiles.sql  0005_add_queue_tracking_fields.sql  0006_dispatch_queue_origin.sql  0007_dispatch_attempt_tracking.sql  0008_add_assigned_driver_to_queue.sql  0008_ensure_dispatched_at_exists.sql  0009_fix_rls_policies.sql  0010_add_customer_id_to_queue.sql  0010_add_shipment_id_to_assignments.sql
services/dispatch/src/: bootstrap.rs  lib.rs  main.rs
services/dispatch/src/infrastructure/: mod.rs
services/dispatch/src/mcp/: audit.rs  auth.rs  context.rs  mod.rs
services/dispatch/tests/integration/: main.rs  mod.rs
services/dispatch/tests/unit/: main.rs  mod.rs
services/identity/: .env  Cargo.toml  Dockerfile
services/identity/migrations/: 0001_create_tenants.sql  0002_create_users.sql  0003_create_api_keys.sql  0004_seed_dev_data.sql  0005_password_reset_tokens.sql  0006_email_verification_tokens.sql  0007_push_tokens.sql  0008_auth_identities.sql  0009_tenant_status_draft.sql  0010_tenant_audit_log.sql  0011_users_phone_number.sql
services/identity/src/: bootstrap.rs  config.rs  main.rs
services/identity/tests/integration/: mod.rs
services/identity/tests/unit/: mod.rs
services/order-intake/: .env  Cargo.toml  Dockerfile
services/order-intake/migrations/: 0001_create_shipments.sql  0002_create_shipment_events.sql  0003_add_customer_fields.sql  0004_add_awb_and_pieces.sql  0005_add_customer_booking_fields.sql  0006_update_awb_service_char.sql  0007_fix_rls_and_check_constraints.sql  0008_add_auto_dispatch.sql
services/order-intake/src/: bootstrap.rs  config.rs  main.rs
services/order-intake/src/infrastructure/: mod.rs
services/order-intake/tests/integration/: mod.rs
services/order-intake/tests/unit/: mod.rs
services/webhooks/: Cargo.toml  Dockerfile
services/webhooks/migrations/: 0001_create_webhooks.sql
services/webhooks/src/: bootstrap.rs  config.rs  lib.rs  main.rs
services/webhooks/src/infrastructure/: mod.rs
(+1004 files in other folders)
