[package]
name        = "logisticos-ai-client"
description = "HTTP client for AI Layer service + Claude API helper"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
reqwest.workspace    = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
uuid.workspace       = true
chrono.workspace     = true
tracing.workspace    = true
