[package]
name        = "logisticos-common"
description = "Shared utilities: pagination, response types, health check, test helpers"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
uuid.workspace       = true
chrono.workspace     = true
tracing.workspace    = true
axum       = { workspace = true }
tower-http = { workspace = true }
