[package]
name        = "logisticos-errors"
description = "Shared error types and AppError enum with HTTP mapping"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
axum.workspace       = true
sqlx.workspace       = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
uuid.workspace       = true
chrono.workspace     = true
tracing.workspace    = true
