[package]
name        = "logisticos-types"
description = "Domain-shared value types: TenantId, UserId, ShipmentId, Money, etc."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
uuid.workspace       = true
chrono.workspace     = true
tracing.workspace    = true
