[package]
name        = "logisticos-ai-layer"
description = "AI Intelligence Layer — Dispatch agent, support agent, ML serving"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[[bin]]
name = "ai_layer"
path = "src/main.rs"

[dependencies]
logisticos-common.workspace  = true
logisticos-errors.workspace  = true
logisticos-auth.workspace    = true
logisticos-tracing.workspace = true
logisticos-types.workspace   = true
logisticos-events.workspace  = true
tokio.workspace      = true
axum.workspace       = true
tower-http.workspace = true
tonic.workspace      = true
prost.workspace      = true
sqlx.workspace       = true
redis.workspace      = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
uuid.workspace       = true
chrono.workspace     = true
config.workspace     = true
dotenvy.workspace    = true
validator.workspace  = true
rdkafka.workspace    = true
tracing.workspace    = true
reqwest.workspace    = true
async-trait.workspace = true

[dev-dependencies]
tower        = { version = "0.4", features = ["util"] }
tokio        = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4"] }
async-trait  = "0.1"
chrono       = { version = "0.4", features = ["serde"] }
