[package]
name        = "logisticos-api-gateway"
description = "API Gateway and Integration Layer — Routing, rate limiting, auth"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[[bin]]
name = "api_gateway"
path = "src/main.rs"

[dependencies]
logisticos-common.workspace  = true
logisticos-errors.workspace  = true
logisticos-auth.workspace    = true
logisticos-tracing.workspace = true
logisticos-types.workspace   = true
logisticos-events.workspace  = true
tokio.workspace      = true
axum.workspace       = true
tower-http.workspace = true
tonic.workspace      = true
prost.workspace      = true
sqlx.workspace       = true
redis.workspace      = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
anyhow.workspace     = true
uuid.workspace       = true
chrono.workspace     = true
config.workspace     = true
dotenvy.workspace    = true
validator.workspace  = true
rdkafka.workspace    = true
tracing.workspace    = true
