[package]
name        = "logisticos-identity"
description = "Identity & Tenant Management Service"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[[bin]]
name = "identity"
path = "src/main.rs"

[dependencies]
logisticos-common.workspace  = true
logisticos-errors.workspace  = true
logisticos-auth.workspace    = true
logisticos-tracing.workspace = true
logisticos-types.workspace   = true
logisticos-events.workspace  = true
tokio.workspace       = true
axum.workspace        = true
axum-extra.workspace  = true
tower-http.workspace  = true
tonic.workspace       = true
prost.workspace       = true
sqlx.workspace        = true
redis.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
jsonwebtoken.workspace = true
argon2.workspace      = true
rand.workspace        = true
thiserror.workspace   = true
anyhow.workspace      = true
uuid.workspace        = true
chrono.workspace      = true
config.workspace      = true
dotenvy.workspace     = true
validator.workspace   = true
rdkafka.workspace     = true
tracing.workspace     = true
async-trait.workspace = true
sha2.workspace        = true
subtle.workspace      = true
hmac                  = "0.12"
base64                = "0.22"

[dev-dependencies]
axum-test     = "15"
tokio         = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json    = "1"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
# rdkafka for dev testing
rdkafka       = { version = "0.36", default-features = false, features = ["cmake-build", "naive-runtime"] }
