[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logisticos-ai-agents"
version = "1.0.0"
description = "LogisticOS Python LangGraph AI agent sidecar — complex orchestration workflows"
requires-python = ">=3.11"
dependencies = [
    # LangGraph / LangChain orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    # Anthropic Claude API
    "anthropic>=0.40.0",
    # FastAPI for HTTP API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Kafka consumer
    "aiokafka>=0.11.0",
    # HTTP client for calling Rust services
    "httpx>=0.27.0",
    # Config / env
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21.0",
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.33.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "tools", "events", "config.py", "main.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
